# AWRAG-v0.05

./: .gitignore  AGENTS.md  ARCHITECTURE_GUARDRAILS.md  AWRAG_NEXT_WORK_PLAN.md  AWRAG_TRUE_HISTORY_FOR_COMPARISON.local  CHANGELOG_UPDATES.md  CHECKPOINT.md  CONTRIBUTING.md  Install_To_Local.ps1  LICENSE  Launch_AWRAG_CLI.cmd  MAIN_MACHINE_UPDATE_PACKET_20260623.md  NFCORPUS_AW1_AW2_REPLICATION_LOG_2026_06_19.md  NOTICE  PACKAGE_BUILD.txt  README.md  READ_FIRST.txt  RELEASE_GATE_REPORT.md  Run_From_USB.ps1  SCIFACT_STRENGTH_RANKING_LOG_2026_06_19.md  SECURITY.md  Start_AWRAG_CLI.ps1  Start_Laptop_Temp_Intake.ps1  UI_BACKEND_DIFF_REPORT.json  UI_BACKEND_DIFF_REPORT.md  UI_BRIDGE_PLAN.md  WORK_LEDGER.md  pyproject.toml
.agents/: AWRAG_AGENT_ONBOARDING.md
.github/: CODEOWNERS
HTML UI/: awrag-intake-exfil-mockup.html  awrag-static-layout-rework.html  index.html
backups/: engine_20260620_pre_modular_split.py
docs/: AWRAG_CLI_OPERATOR_GUIDE.md  AWRAG_HUMAN_COMPANION.md  AWRAG_QUERY_MATH_AND_CODE_GLOSSARY.md  AWRAG_TODO_LEDGER_FROM_DESIGN_TALK.md  AWRAG_WHOLE_REPO_MAP_GLOSSARY.md  AW_PACKET_DIFF_FORMS_V1.md  CANONICAL_CHAT_DATASET_2026-06-20.md  CLI_SHORTCUTS.md  COUNT_FIELD_INTERIOR_FORMAT_SPEC.md  COUNT_WALK_SPEECH_V0.md  DATASET_FOLDER_AND_GLOBAL_SYMBOL_ALLOCATOR_LAW.md  EDGE_CASE_SNIFFING_LAW.md  INDEX_READINESS_GATE.md  LAPTOP_TEMP_INTAKE.md  OPERATOR_UI_CONTRACT.md  OSRL_OPERATOR_STATE_REASONING_LAYER.md  POST_LEXICON_SCAFFOLD_LOOP_V0_ROADMAP.md  (+7 more)
src/awrag/native/awrag_counts/: CMakeLists.txt
src/awrag/native/awrag_counts/src/: awrag_counts.cpp
(+96 files in other folders)
